# GeoMath2

./: .gitignore  CMakeLists.txt  GeoMath2.sln  GeoMath2.vgdbcmake  README.md
doc/: Doxyfile
doc/html/: _geo_math_8cpp.html  _geo_math_8cpp__incl.map  _geo_math_8cpp__incl.md5  _geo_math_8cpp_afdf13c0c62f45dd409f5e800cc3e0af0_icgraph.map  _geo_math_8cpp_afdf13c0c62f45dd409f5e800cc3e0af0_icgraph.md5  _geo_math_8h.html  _geo_math_8h__dep__incl.map  _geo_math_8h__dep__incl.md5  _geo_math_8h__incl.map  _geo_math_8h__incl.md5  _geo_math_8h_source.html  annotated.html  class_geo_math_1_1_route_line-members.html  class_geo_math_1_1_route_line.html  class_geo_math_1_1_route_template2_d-members.html  class_geo_math_1_1_route_template2_d.html  class_geo_math_1_1_route_template2_d_ad3845a235c4be69b47788cc810ce1b1c_cgraph.map  class_geo_math_1_1_route_template2_d_ad3845a235c4be69b47788cc810ce1b1c_cgraph.md5  class_geo_math_1_1_route_template2_d_ad71e1088a85225f1361586dd36e3801d_cgraph.map  class_geo_math_1_1_route_template2_d_ad71e1088a85225f1361586dd36e3801d_cgraph.md5  class_geo_math_1_1_simple_figure3_d-members.html  class_geo_math_1_1_simple_figure3_d.html  class_geo_math_1_1v2-members.html  class_geo_math_1_1v2.html  class_geo_math_1_1v2_a9ea3c25bff99e51c4dae4b4c0925fae9_cgraph.map  class_geo_math_1_1v2_a9ea3c25bff99e51c4dae4b4c0925fae9_cgraph.md5  class_geo_math_1_1v2_a9ea3c25bff99e51c4dae4b4c0925fae9_icgraph.map  class_geo_math_1_1v2_a9ea3c25bff99e51c4dae4b4c0925fae9_icgraph.md5  class_geo_math_1_1v3-members.html  files.html  (+38 more)
lib_src/: GeoMath.cpp  GeoMath.h
src/: main.cpp
(+95 files in other folders)
